force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <validationRules>
        <fullName>Resolution_Date_Required_On_Close</fullName>
        <active>true</active>
        <description>Resolution Date is mandatory when Status is Closed</description>
        <errorConditionFormula>AND(ISPICKVAL(Status, "Closed"), ISBLANK(ResolutionDate__c))</errorConditionFormula>
        <errorMessage>Resolution Date is required when closing a case.</errorMessage>
    </validationRules>
</CustomObject>