force-app/main/default/objects/Case/fields/LegacyCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>LegacyCaseNumber__c</fullName>
    <label>Legacy Case Number</label>
    <description>Original case number from source system (Dynamics or Mercer mailbox) for reference</description>
    <type>Text</type>
    <length>50</length>
</CustomField>