force-app/main/default/objects/Case/fields/ResolutionDate__c.field-meta.xml
<CustomField>
    <fullName>ResolutionDate__c</fullName>
    <label>Resolution Date</label>
    <description>Date and time the case was formally resolved</description>
    <type>DateTime</type>
</CustomField>