force-app/main/default/objects/Case/fields/ResolutionTimeDays__c.field-meta.xml
<CustomField>
    <fullName>ResolutionTimeDays__c</fullName>
    <label>Resolution Time (Days)</label>
    <description>Calculated field: days from case creation to resolution</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>