force-app/main/default/objects/Case/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Dynamics CRM</fullName><default>false</default></value>
            <value><fullName>Mercer Mailbox</fullName><default>false</default></value>
            <value><fullName>Salesforce</fullName><default>true</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>